project/logs/20250801_194410.log
Using adapter: NVIDIA GeForce RTX 4060 Laptop GPU

Feature Level: 12.2

Complete create D3D12Device!
Begin CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Complete CompileShader, pathObject3D.VS.hlsl,profile:vs_6_0

Begin CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

Qembed_debug:38:12: warning: implicit truncation of vector type [-Wconversion]
    float3 transformedUV = mul(float32_t4(input.texcoord, 0.0f, 1.0f), gMaterial.uvTransform);
           ^
Qembed_debug:57:1: error: control reaches end of non-void function [-Wreturn-type]
}
^
Qembed_debug:58:5: error: expected unqualified-id
    else
    ^
Qembed_debug:62:5: error: expected unqualified-id
    return output;
    ^
Qembed_debug:63:1: error: extraneous closing brace ('}')
}
^

Complete CompileShader, pathObject3D.PS.hlsl,profile:ps_6_0

